# serializer version: 1
# name: test_platform_setup_and_discovery[sp_drezasavompxpcgm][camera.cam_garage-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'camera',
    'entity_category': None,
    'entity_id': 'camera.cam_garage',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <CameraEntityFeature: 2>,
    'translation_key': None,
    'unique_id': 'tuya.bf7b8e59f8cd49f425mmfm',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[sp_drezasavompxpcgm][camera.cam_garage-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'brand': 'Tuya',
      'friendly_name': 'CAM GARAGE',
      'model_name': 'Indoor camera ',
      'motion_detection': True,
      'supported_features': <CameraEntityFeature: 2>,
    }),
    'context': <ANY>,
    'entity_id': 'camera.cam_garage',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'idle',
  })
# ---
# name: test_platform_setup_and_discovery[sp_rjKXWRohlvOTyLBu][camera.cam_porch-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'camera',
    'entity_category': None,
    'entity_id': 'camera.cam_porch',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <CameraEntityFeature: 2>,
    'translation_key': None,
    'unique_id': 'tuya.bf9d5b7ea61ea4c9a6rom9',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[sp_rjKXWRohlvOTyLBu][camera.cam_porch-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'brand': 'Tuya',
      'friendly_name': 'CAM PORCH',
      'model_name': 'Indoor cam Pan/Tilt ',
      'supported_features': <CameraEntityFeature: 2>,
    }),
    'context': <ANY>,
    'entity_id': 'camera.cam_porch',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'idle',
  })
# ---
# name: test_platform_setup_and_discovery[sp_sdd5f5f2dl5wydjf][camera.c9-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'camera',
    'entity_category': None,
    'entity_id': 'camera.c9',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <CameraEntityFeature: 2>,
    'translation_key': None,
    'unique_id': 'tuya.bf3f8b448bbc123e29oghf',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[sp_sdd5f5f2dl5wydjf][camera.c9-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'brand': 'Tuya',
      'friendly_name': 'C9',
      'model_name': 'Security Camera',
      'motion_detection': True,
      'supported_features': <CameraEntityFeature: 2>,
    }),
    'context': <ANY>,
    'entity_id': 'camera.c9',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'recording',
  })
# ---
